# CSc-85020

./: README.md
Assignments/A1/: A1-Washburn.tex  AssignmentCUNY.cls  CUNY-assignment.cls  Makefile  coding-theory.cabal
Assignments/A1/src/: CodingTheory.hs
Assignments/A2/: A2-Washburn.tex
Assignments/A3/: A3-Washburn.tex
Presentation/: Makefile  Washburn-CSc-85020-Presentation-Errata.md  generate-graphs.py  slides.md
Presentation/assets/: references.bib
Presentation/slides/: Makefile  slides.md
Presentation/slides/assets/: references.bib
Project/: Makefile  cabal.project  pop-count-synthesis.cabal
Project/assets/: references.bib
Project/doc/: CHANGELOG.md  README.md
Project/src/Abstract/: Machine.hs
Project/src/Control/Monad/: Free.hs
Project/src/Control/Monad/Free/: Class.hs
Project/src/Data/: BitVector.hs
Project/src/Data/BitVector/: Internal.hs
Project/src/Synthesis/: Operators.hs  PopCount.hs
Project/txt/: proposal-paper.md  proposal-slides.md  report-paper.md
